* Added preBuildIncrementer attribute. - Patch by Brett Wooldridge
* Added separator attribute to DefaultLabelIncrementer. CVSLabelIncrementor is just the default with separator="-".  - Patch by Jeffrey Fredrick

EmptyLabelIncrementer
----------------------
* Added EmptyLabelIncrementer - Submission by Josh Knowles

HTMLEmailPublisher
----------------------
* Added charset attribute.

LabelIncrementer
----------------------
* Added getDefaultLabel()

Main
----------------------
* Use current time if lastbuildtime isn't specified - Patch by Josh Knowles

MavenBuilder
---------------------
* New builder implementation, like AntBuilder but for Maven - by Florin Vancea.

ModificationSet
---------------------
* quietPeriod now optional; default value is 60 (one minutes)
* will complain if there isn't at least one nested sourcecontrol element

Multiple Classes
---------------------
* Added support to run multiple projects in one instance of CruiseControl. Each project is on its own schedule and only one project will build at a time. Multiple project supported in JMX and web reporting interfaces.

NavigationTag
----------------------
* Fixed bug to allow "L" in build label - Patch by Christopher Lenz
* Added "startingBuildNumber" and "finalBuildNumber" attributes, to allow for ranges of builds to be output; useful for, say, creating a drop-down list after the first 10 links.
* Now outputs the log file as a "logfile" variable.

Project
----------------------
* Project will create log directory if it doesn't exist. - Patch by Mark Richters
* Serialized file now uses .ser extension
* Will now get a default label from the LabelIncrementer if it doesn't already have one.

ProjectXMLHelper
----------------------
* ModificationSet is now pluggable. Defaults to the standard modification set, but a different implementation could be specified in your config.xml, so long as it extends ModificationSet. Thanks to Mike Royal, via Mike Mason.